# brkraw-cli

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/brkraw_cli_addon/: __init__.py  plugin.py
