[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brkraw-cli-addon"
version = "0.1.0"
description = "Template addon for brkraw CLI via brkraw.cli entry point."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "BrkRaw"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.entry-points."brkraw.cli"]
foo = "brkraw_cli_addon.plugin:register"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
